tests/negative/resource_decl_missing_equal.ora
resource TokenUnit u256;

contract MissingEqual {}
